--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,8 @@
 .page-container{
-    background-color: rgb(249, 247, 245);
+    background-color: rgb(228, 228, 228);
     margin: 0;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 
@@ -9,7 +10,11 @@
     display: flex;
     justify-content: center;
     background-color: rgb(48, 49, 72);
-    border-bottom: black 4px solid;
+    /* border-bottom: black 4px solid; */
+    box-shadow: 0 0 7px black;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 #header-title {
@@ -19,18 +24,18 @@
 
 #about-section {
     display: flex;
-    margin: 2rem;
+    margin: 6rem 2rem;
     align-items: flex-start;
 }
 
 .about-me {
     font-size: 2rem;
-    margin: auto 2rem;
+    margin: auto 4rem;
 }
 
 .profile-photo {
     border-radius: 50%;
-    width: auto;
+    width: 250px;
     height: 250px;
     box-shadow: 0 0 7px black;
 }
@@ -38,7 +43,7 @@
 #project-section {
     display: flex;
     flex-flow: column;
-    margin: 2rem;
+    margin: 6rem 1rem;
     align-items: flex-end;
 }
 
@@ -46,14 +51,14 @@
     display: flex;
     flex-wrap: wrap;
     margin: 1rem;
+    align-items: center;
 }
 
 .project-photo {
     border-radius: 50%;
-    width: auto;
+    width: 250px;
     height: 250px;
     overflow: hidden;
-    position: relative;
     box-shadow: 0 0 7px black;
 }
 
@@ -73,4 +78,19 @@
     margin: auto 2rem;
     width: 60%;
     text-align: center;
+}
+
+#footer-section {
+    display: flex;
+    justify-content: center;
+    margin: 6rem 2rem 4rem 2rem;
+}
+
+.link-icon {
+    width: 35px;
+    height: 35px;
+    margin: auto 2rem;
+    border-radius: 50%;
+    box-shadow: 0 0 4px black;
+
 }
